# ob-dj-feature-flags

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.env  docker-compose.yml  manage.py  pytest.ini  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: pre-release.yml  release.yml  test-build.yml
config/: settings.py  urls.py  wsgi.py
ob_dj_feature_flags/apis/flags/: urls.py  views.py
ob_dj_feature_flags/apis/flags copy/: serializers.py  urls.py  views.py
ob_dj_feature_flags/apis/todos/: serializers.py  urls.py  views.py
ob_dj_feature_flags/core/flags/: __init__.py  admin.py  apps.py  managers.py  models.py
ob_dj_feature_flags/core/flags copy/: apps.py  models.py  receivers.py
ob_dj_feature_flags/core/flags/migrations/: 0001_initial.py  0002_auto_20230503_2339.py
ob_dj_feature_flags/core/todos/: __init__.py  apps.py  models.py
ob_dj_feature_flags/core/todos/migrations/: 0001_initial.py
ob_dj_feature_flags/utils/: decorators.py  model.py
tests/: conftest.py  test_api_docs.py  test_apps.py
tests/apis/flags/: test_feature_flags_list.py
tests/apis/todos/: test_todos_api_feature_flags.py
tests/core/flags/: factories.py  test_factories.py
