[metadata]
name = ob-dj-feature-flags
# version = 0.0.3
description = OBytes django application for managing feature flags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.obytes.com/
author = OBytes
author_email = hello@obytes.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
;install_requires =
;    Django >= X.Y  # Replace "X.Y" as appropriate
setup_requires =
    setuptools_scm